<resources>
    <string name="app_name">PixabayViewer</string>

    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="home_fragment_label">Home</string>
    <string name="image_detail_fragment_label">Image Detail</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_name_stub">Alex User</string>
    <string name="thumbnail_description">Thumbnail</string>
    <string name="large_image_description">Large image</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="email_title">Email:</string>
    <string name="password_title">Password:</string>
    <string name="email_hint">abcd123@email.your</string>
    <string name="age_title">Age:</string>
    <string name="register_fragment_label">Register</string>
    <string name="login_already_exists">This email is already registered!</string>
    <string name="login_not_exists">This email is not registered!</string>
    <string name="login_wrong_password">Wrong password!</string>
    <string name="successful_registration">Account created: %s</string>
    <string name="account_register_error">Error occurred during account creation</string>
    <string name="account_login_error">Error occurred during login</string>
    <string name="password_notification">(6 – 12 characters long)</string>
    <string name="age_notification">(should be from 18 to 99)</string>
    <string name="email_notification">(abcd123@your.mail)</string>
    <string name="network_no_connection">No internet connection!</string>
    <string name="network_cannot_load_images">Can not load images!</string>
</resources>