<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/email_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_normal"
        android:layout_marginEnd="@dimen/gap_normal"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/emailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emailTitle"
        tools:text="@string/email_hint" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/emailTitle"
        app:layout_constraintVertical_bias="0.301"
        android:text="@string/password_title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_normal"
        android:layout_marginTop="@dimen/gap_normal"
        android:layout_marginEnd="@dimen/gap_normal"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/passwordTitle"
        app:layout_constraintTop_toBottomOf="@id/email"
        tools:text="123qweasdzxc" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_huge"
        android:layout_marginEnd="@dimen/gap_huge"
        android:text="@string/login_button"
        app:layout_constraintEnd_toStartOf="@id/register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_huge"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_bar_default" />

</androidx.constraintlayout.widget.ConstraintLayout>